Version 0.9.0alpha3 - 2007-03-XX
 * New Features:
   * Using of 'performed by' AR types (without instrument or vocal).
 * Bug Fixes:
   * Fixed file clustering.
   * Added %albumartistsort%, %releasetype% and %releasestatus% to the
     file naming example (#2458)
   * Sanitize dates from ID3 tags. (#2460)
   * Fixed page switching in the options window on error. (#2455)
   * Correct case-insensitive file renaming on Windows (#1003, #2457)
   * Relative paths in the 'Move files to' option are relative to the
     current path of the file. (#2454)
   * Added a .desktop file. (#2470)

Version 0.9.0alpha2 - 2007-03-04
 * New Features:
   * New variable %_extension% (#2447)
   * File naming format tester. (#2448)
   * Added automatic checking for new versions.
 * Bug Fixes:
   * Fixed window position saving/restoring. (#2449)
   * Fixed iTunes compilation flag saving. (#2450)

Version 0.9.0alpha1 - 2007-03-03
 * First release.